[gd_scene load_steps=15 format=3 uid="uid://ctvglkuejbvoh"]

[ext_resource type="Texture2D" uid="uid://v4n35yyg3ymw" path="res://assets/TileSet_V1.png" id="1_onr0y"]
[ext_resource type="Script" path="res://scenes/ANT_Script.gd" id="1_ufr4c"]
[ext_resource type="Texture2D" uid="uid://bj5if8o1svjau" path="res://assets/0e138ed36dda51f.png" id="2_ejcl1"]
[ext_resource type="Script" path="res://addons/godot_rl_agents/sensors/sensors_2d/RaycastSensor2D.gd" id="3_sd8g5"]
[ext_resource type="Texture2D" uid="uid://ce0kmkwn7m7l6" path="res://assets/Leaf.png" id="4_wmxnj"]
[ext_resource type="Texture2D" uid="uid://dmj8mqblo6y5n" path="res://assets/view_triangle.png" id="5_bihbn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rthfy"]
texture = ExtResource("1_onr0y")
margins = Vector2i(224, 384)
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rlxvy"]
texture = ExtResource("1_onr0y")
margins = Vector2i(0, 416)
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bbt1a"]
texture = ExtResource("1_onr0y")
margins = Vector2i(224, 288)
texture_region_size = Vector2i(32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_twatx"]
texture = ExtResource("1_onr0y")
margins = Vector2i(0, 192)
texture_region_size = Vector2i(32, 32)

[sub_resource type="TileSet" id="TileSet_0db0h"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rthfy")
sources/1 = SubResource("TileSetAtlasSource_rlxvy")
sources/2 = SubResource("TileSetAtlasSource_bbt1a")
sources/3 = SubResource("TileSetAtlasSource_twatx")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oxpyr"]
radius = 7.0
height = 26.0005

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0bi0"]
size = Vector2(31.1532, 279.826)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_raa5n"]
size = Vector2(35.3807, 67.0752)

[node name="Batch 1" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource("TileSet_0db0h")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(1, 1, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 2, 1, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 3, 1, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 4, 1, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 5, 1, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 6, 1, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 7, 1, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 8, 1, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 9, 1, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 10, 1, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 11, 1, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 12, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 393228, 1, 0, 458764, 1, 0, 524300, 1, 0, 458753, 0, 0, 524289, 0, 0, 589836, 1, 0, 589835, 1, 0, 589834, 1, 0, 589833, 1, 0, 589832, 1, 0, 589831, 1, 0, 589830, 1, 0, 589829, 1, 0, 589828, 1, 0, 589827, 1, 0, 589826, 1, 0, 589825, 1, 0, 0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0)

[node name="ANT" type="CharacterBody2D" parent="." groups=["AGENT"]]
unique_name_in_owner = true
position = Vector2(302, 249)
script = ExtResource("1_ufr4c")

[node name="Sprite2D" type="Sprite2D" parent="ANT"]
position = Vector2(-0.179688, -0.960205)
scale = Vector2(0.0909255, 0.0790295)
texture = ExtResource("2_ejcl1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ANT"]
position = Vector2(0, -0.000274658)
shape = SubResource("CapsuleShape2D_oxpyr")

[node name="RaycastSensor2D" type="Node2D" parent="ANT"]
visibility_layer = 3
rotation = 4.71239
script = ExtResource("3_sd8g5")
n_rays = 32.0
ray_length = 111

[node name="Sprite2D2" type="Sprite2D" parent="ANT"]
visible = false
modulate = Color(0.964706, 0, 1, 0.345098)
self_modulate = Color(1, 0.0196078, 0.121569, 1)
show_behind_parent = true
position = Vector2(0.793781, -74.1244)
rotation = 3.14159
scale = Vector2(0.115747, 0.0710824)
texture = ExtResource("5_bihbn")
region_rect = Rect2(0.518, 0, 0, 0)

[node name="score_label" type="RichTextLabel" parent="."]
modulate = Color(0.964706, 0.941176, 0.666667, 1)
offset_left = 31.0
offset_top = -7.0
offset_right = 259.0
offset_bottom = 16.0
scale = Vector2(1.673, 1.673)
text = "FOOD: "

[node name="walls" type="Node2D" parent="."]
show_behind_parent = true

[node name="BONK" type="Area2D" parent="walls"]
show_behind_parent = true
position = Vector2(88, 204)
rotation = 3.13802
scale = Vector2(0.755925, -0.588161)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/BONK"]
position = Vector2(-1.52588e-05, -3.05176e-05)
shape = SubResource("RectangleShape2D_f0bi0")

[node name="ColorRect" type="ColorRect" parent="walls/BONK"]
offset_left = -16.0
offset_top = -140.0
offset_right = 16.0
offset_bottom = 143.0
color = Color(0.282353, 0.25098, 0.196078, 1)

[node name="BONK2" type="Area2D" parent="walls"]
show_behind_parent = true
position = Vector2(160, 96)
rotation = 2.54955
scale = Vector2(1.61034, -0.113898)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/BONK2"]
position = Vector2(-1.52588e-05, -3.05176e-05)
shape = SubResource("RectangleShape2D_f0bi0")

[node name="ColorRect" type="ColorRect" parent="walls/BONK2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -141.5
offset_right = 16.0
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.282353, 0.25098, 0.196078, 1)

[node name="BONK3" type="Area2D" parent="walls"]
show_behind_parent = true
position = Vector2(315, 115)
rotation = 3.13802
scale = Vector2(0.755925, -0.588161)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/BONK3"]
position = Vector2(-1.52588e-05, -3.05176e-05)
shape = SubResource("RectangleShape2D_f0bi0")

[node name="ColorRect" type="ColorRect" parent="walls/BONK3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -141.5
offset_right = 16.0
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.282353, 0.25098, 0.196078, 1)

[node name="BONK4" type="Area2D" parent="walls"]
show_behind_parent = true
position = Vector2(232, 226)
rotation = 2.54955
scale = Vector2(1.09919, -0.126274)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/BONK4"]
position = Vector2(-1.52588e-05, -3.05176e-05)
shape = SubResource("RectangleShape2D_f0bi0")

[node name="ColorRect" type="ColorRect" parent="walls/BONK4"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -141.5
offset_right = 16.0
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.282353, 0.25098, 0.196078, 1)

[node name="BONK5" type="Area2D" parent="walls"]
show_behind_parent = true
position = Vector2(125, 203)
rotation = 2.54955
scale = Vector2(3.0696, 0.0833481)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/BONK5"]
position = Vector2(0.0366096, 0)
shape = SubResource("RectangleShape2D_f0bi0")

[node name="ColorRect" type="ColorRect" parent="walls/BONK5"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -141.5
offset_right = 16.0
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.282353, 0.25098, 0.196078, 1)

[node name="BONK6" type="Area2D" parent="walls"]
show_behind_parent = true
position = Vector2(271, 126)
rotation = 2.54955
scale = Vector2(3.0696, 0.0833481)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/BONK6"]
position = Vector2(-1.52588e-05, -3.05176e-05)
shape = SubResource("RectangleShape2D_f0bi0")

[node name="ColorRect" type="ColorRect" parent="walls/BONK6"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -141.5
offset_right = 16.0
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.282353, 0.25098, 0.196078, 1)
metadata/_edit_use_anchors_ = true

[node name="Leaf" type="Area2D" parent="."]
position = Vector2(138, 150)
rotation = 0.888479
scale = Vector2(0.48, 0.48)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Leaf"]
position = Vector2(-2.42548, -1.9707)
rotation = 2.08951
shape = SubResource("RectangleShape2D_raa5n")
one_way_collision_margin = 0.0

[node name="Sprite2D" type="Sprite2D" parent="Leaf"]
show_behind_parent = true
scale = Vector2(0.112844, 0.112844)
texture = ExtResource("4_wmxnj")

[connection signal="body_entered" from="walls/BONK" to="ANT" method="_on_bonk_body_entered"]
[connection signal="body_entered" from="walls/BONK2" to="ANT" method="_on_bonk_body_entered"]
[connection signal="body_entered" from="walls/BONK3" to="ANT" method="_on_bonk_body_entered"]
[connection signal="body_entered" from="walls/BONK4" to="ANT" method="_on_bonk_body_entered"]
[connection signal="body_entered" from="walls/BONK5" to="ANT" method="_on_bonk_body_entered"]
[connection signal="body_entered" from="walls/BONK6" to="ANT" method="_on_bonk_body_entered"]
[connection signal="body_entered" from="Leaf" to="ANT" method="_on_LEAF_body_entered"]
